istio/guestbook-ui-chrome-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-ui
spec:
  hosts:
  - guestbook-ui
  - "*"
  gateways:
  - guestbook-gateway
  http:
  - match:
    - uri:
        prefix: /
      headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
    - destination:
        host: guestbook-ui
        subset: v2
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: guestbook-ui
        subset: v1
