istio/guestbook-ui-delay-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-ui
spec:
  hosts:
  - guestbook-ui
  - "*"
  gateways:
  - guestbook-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: guestbook-ui
        subset: v1
    fault:
      delay:
        percent: 100
        fixedDelay: 5s
