istio/helloworld-service-80p-v1-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-service
spec:
  hosts:
  - helloworld-service
  http:
  - route:
    - destination:
        host: helloworld-service
        subset: v1
      weight: 80
    - destination:
        host: helloworld-service
        subset: v2
      weight: 20
